Use noto sans nerd font polybar

--- a/.config/polybar/hack/config.ini
+++ b/.config/polybar/hack/config.ini
@@ -132,7 +132,7 @@ module-margin-right = 0
 ; See the Fonts wiki page for more details
 
 font-0 = "JetBrains Mono:pixelsize=10;4"
-font-1 = "Iosevka Nerd Font:pixelsize=12;4"
+font-1 = "NotoSansMono Nerd Font Mono:pixelsize=12;4"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
