--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,7 +11,7 @@ floating_modifier $super
 #autostart
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
-exec --no-startup-id feh --bg-fill ~/.wallpaper
+exec --no-startup-id feh --bg-fill ~/.wallpaper.png
 exec --no-startup-id xsettingsd &
 exec --no-startup-id picom -b
 exec --no-startup-id copyq --start-server
