--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 exec --no-startup-id feh --bg-fill ~/.wallpaper.png
 exec --no-startup-id xsettingsd &
-exec --no-startup-id picom -b
+#exec --no-startup-id picom -b
 exec --no-startup-id copyq --start-server
 
 exec --no-startup-id export QT_QPA_PLATFORMTHEME="qt5ct"
