--- a/.config/i3/config
+++ b/.config/i3/config
@@ -11,10 +11,11 @@ floating_modifier $super
 #autostart
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
-exec --no-startup-id feh --bg-fill ~/.wallpaper.png
+exec --no-startup-id feh --bg-fill ~/.wallpaper.jpg
 exec --no-startup-id xsettingsd &
-#exec --no-startup-id picom -b
+exec --no-startup-id picom -b
 exec --no-startup-id copyq --start-server
+exec --no-startup-id insync start
 
 exec --no-startup-id export QT_QPA_PLATFORMTHEME="qt5ct"
 
@@ -39,6 +40,7 @@ bindsym $super+Return exec alacritty
 # bindsym $super+a exec "rofi -modi drun,run,filebrowser,ssh,window -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 4 -font 'Noto Sans UI 8' -show-icons -icon-theme 'Papirus'"
 bindsym $super+Tab exec "rofi -modi drun,run,filebrowser,window -lines 12 -padding 18 -width 20 -location 0 -show drun -sidebar-mode"
 bindsym $alt+grave exec "rofi -modi window,run,filebrowser,drun -lines 12 -padding 18 -width 40 -location 0 -show window -sidebar-mode"
+bindsym $super+semicolon exec "rofi -show emoji"
 bindsym $alt+Tab workspace back_and_forth
 bindsym Control+Shift+period exec dunstctl action
 
@@ -63,7 +65,7 @@ bindsym $super+Shift+f exec nautilus;focus
 bindsym $super+Shift+p exec code
 bindsym $super+p exec ~/scripts/focus-and-open-if-needed.sh --class Code --exec code
 
-bindsym $super+k exec notion-app 
+bindsym $super+k exec obsidian 
 
 #change volume
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+
@@ -130,6 +132,9 @@ bindsym $super+3 workspace 3
 bindsym $super+4 workspace 4
 bindsym $super+5 workspace 5
 bindsym $super+6 workspace 6
+bindsym $super+7 workspace 7
+bindsym $super+8 workspace 8
+bindsym $super+9 workspace 9
 
 # move focused container to workspace
 bindsym $super+Shift+1 move container to workspace 1
@@ -138,6 +143,9 @@ bindsym $super+Shift+3 move container to workspace 3
 bindsym $super+Shift+4 move container to workspace 4
 bindsym $super+Shift+5 move container to workspace 5
 bindsym $super+Shift+6 move container to workspace 6
+bindsym $super+Shift+7 move container to workspace 7
+bindsym $super+Shift+8 move container to workspace 8
+bindsym $super+Shift+9 move container to workspace 9
 
 # custom shortcuts
 # bindsym $super+v exec copyq -e "showAt()"
@@ -184,6 +192,8 @@ for_window [class=".*"] border pixel 4
 assign [class="Brave-browser" instance="brave-browser"] 1
 assign [class="Slack" instance="slack"] 5
 assign [class="discord" instance="discord"] 4
+assign [class="Steam" instance="Steam"] 7
+assign [class="csgo_linux64"] 8
 
 assign [class=Geany|Evince|Gucharmap|Soffice|libreoffice*] 4
 assign [class=Audacity|Vlc|mpv|Ghb|Xfburn|Gimp*|Inkscape] 5
