--- a/.config/polybar/hack/modules.ini
+++ b/.config/polybar/hack/modules.ini
@@ -550,6 +550,9 @@ ws-icon-2 = 3;3 
 ws-icon-3 = 4;4 ﭮ
 ws-icon-4 = 5;5 聆
 ws-icon-5 = 6;6 
+ws-icon-6 = 7;7 戮
+ws-icon-7 = 8;8 
+ws-icon-8 = 9;9 
 ws-icon-default = 
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
